fluxcd/01-infrastructure/longhorn/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: longhorn-to-shared-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: longhorn
    apps.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: longhorn-system
  to:
    - group: "gateway.networking.k8s.io"
      kind: Gateway
      name: shared-gateway
